--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -3,7 +3,8 @@
 					xmlns:mx="library://ns.adobe.com/flex/halo"
 					xmlns:s="library://ns.adobe.com/flex/spark"
 					height="100%" width="100%"
-					skinClass="spark.skins.spark.SkinnableContainerSkin">
+					skinClass="spark.skins.spark.SkinnableContainerSkin"
+					>
 
 	<fx:Script>
 		<![CDATA[
@@ -35,14 +36,32 @@
 	<s:layout>
 		<s:VerticalLayout variableRowHeight="true"/>
 	</s:layout>
-
-	<s:List dataProvider="{ typeData }" height="100%" labelField="displayName" width="100%"
-			textAlign="center"
-			contentBackgroundAlpha="0"
-			itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.TypeItemRenderer" useVirtualLayout="false">
-
-		<s:layout>
-			<s:VerticalLayout variableRowHeight="true" gap="10"/>
-		</s:layout>
-	</s:List>
+	
+	<s:Group width="100%" height="100%">
+		<s:Rect width="100%" height="100%">
+			<s:fill>
+				<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+			</s:fill>
+		</s:Rect>
+		
+		<s:HGroup width="100%" height="100%" gap="0">
+			<s:List width="100%" height="100%" borderVisible="false" contentBackgroundAlpha="0"
+					dataProvider="{ typeData }"
+					itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.TypeItemRenderer"
+					labelField="displayName" textAlign="center">
+				
+				<s:layout>
+					<s:VerticalLayout variableRowHeight="true" gap="0" horizontalAlign="center"/>
+				</s:layout>
+			</s:List>
+			
+			<s:Rect width="3" height="100%">
+				<s:fill>
+					<s:SolidColor color="#424242"/>
+				</s:fill>
+			</s:Rect>
+		</s:HGroup>
+		
+	</s:Group>
+	
 </s:NavigatorContent>
