--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/LoginButtonSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/LoginButtonSkin.mxml
@@ -4,7 +4,10 @@
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 minHeight="20" minWidth="10"
 			 creationComplete="creationCompleteHandler()"
-			 alpha.disabled="0.5">
+			 >
+	<s:layout>
+		<s:VerticalLayout verticalAlign="middle"/>
+	</s:layout>
 	<!-- host component -->
 
 	<fx:Metadata>
@@ -66,16 +69,9 @@
 	</s:states>
 
 	<!-- layer 2: fill -->
-	<s:Rect bottom="0" left="0" right="0" top="0">
-		<s:fill>
-			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="#B5B6B8" color.down="#77787C" color.over="#BBBDBD"/>
-				<s:GradientEntry color="#77787C" color.down="#464950" color.over="#9FA0A1"/>
-			</s:LinearGradient>
-		</s:fill>
-	</s:Rect>
+	
 
-	<s:Group bottom="0" left="0" right="0" top="0">
+	<s:Group>
 
 		<s:layout>
 			<s:HorizontalLayout paddingLeft="7" paddingRight="7" verticalAlign="middle"
