--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeObjectlistItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeObjectlistItemRenderer.mxml
@@ -51,8 +51,8 @@
 				codeInterface[ "value" ] = matches[ 2 ];
 
 				//				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
-				secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
-				firstColor.color = secondColor.color + 0x222222;
+				//secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
+				//firstColor.color = secondColor.color + 0x222222;
 
 				var comboBoxData : ArrayCollection = new ArrayCollection();
 				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
@@ -145,20 +145,20 @@
 		<s:Rect bottom="0" left="0" right="0" top="0">
 			<s:fill>
 				<s:LinearGradient rotation="90">
-					<s:GradientEntry id="firstColor" color="#D8D8D8" />
-					<s:GradientEntry id="secondColor" color="#CDCDCD" />
+					<s:GradientEntry id="firstColor" color="#FFFFFF" />
+					<s:GradientEntry id="secondColor" color="#DCDCDC" />
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
 		
 		<s:RichText id="nameLabel"
-					minHeight="21" text="{ displayName }" width="100%" color="#FFFFFF" fontFamily="Verdana" fontSize="10" fontWeight="bold"
+					minHeight="21" text="{ displayName }" width="100%" color="#000000" fontFamily="Verdana" fontSize="10" fontWeight="bold"
 					paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" verticalCenter="0" />
 		
 	</s:Group>
 
 	<mx:ComboBox id="valueField"
-				 height="21" labelField="name" minWidth="10" width="90"
+				 height="21" labelField="name" minWidth="10" width="128"
 				 textAlign="left"
 				 change="valueField_changeHandler( event )"
 				 toolTip="{ help }"/>
