--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -3,8 +3,7 @@
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/mx"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  height="100%" width="100%"
-		  paddingBottom="7" paddingLeft="7" paddingRight="7" paddingTop="7" gap="0" 
+		  height="100%" width="100%" gap="0" 
 		  xmlns:panels="net.vdombox.ide.modules.wysiwyg.view.components.panels.*">
 
 	<fx:Script>
@@ -25,15 +24,15 @@
 	<components:WorkArea id="workArea"
 						 height="100%" width="100%"/>
 
-	<s:VGroup height="100%" width="220">
+	<s:VGroup height="100%" width="223">
 
 		<panels:ObjectAttributesPanel id="objectAttributesPanel"
-									  width="100%"
+									  width="100%" height="60%"
 									  backgroundAlpha="0" cornerRadius="5" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
 									  title="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_title') }" borderAlpha="0" borderVisible="false"/>
 
 		<panels:ObjectsTreePanel id="objectsTreePanel"
-									 width="100%" height="200"
+									 width="100%" height="40%"
 									 backgroundAlpha="0" cornerRadius="5" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
 									 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
 
