--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/panels/ObjectAttributesPanel.mxml
@@ -4,9 +4,6 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark">
 
-	<s:layout>
-		<s:BasicLayout/>
-	</s:layout>
 
 	<fx:Script>
 		<![CDATA[
@@ -174,24 +171,20 @@
 			}
 		]]>
 	</fx:Script>
-
 	<s:Label id="typeNameLabel"
 			 height="20"
 			 backgroundColor="#000000" color="#FFFFFF" left="0" paddingLeft="3" paddingTop="3" right="0" textAlign="center" verticalAlign="middle"/>
 
-	<s:List id="attributesList"
-			width="220"
-			bottom="0" top="20"
+	<s:List id="attributesList" top="20" bottom="0" width="220" 
 			change="dispatchEvent( new ObjectAttributesPanelEvent( ObjectAttributesPanelEvent.CURRENT_ATTRIBUTE_CHANGED ))"
 			itemRendererFunction="itemRendererFunction" useVirtualLayout="false">
-
+			
 		<s:layout>
 			<s:VerticalLayout gap="0"
-							  variableRowHeight="true"/>
-		</s:layout>
-
+								  variableRowHeight="true"/>
+		</s:layout>	
 	</s:List>
-
+	
 	<s:controlBarContent>
 
 		<components:PanelButton id="deleteButton"
