Ask question on deleting pages
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6912 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -315,6 +315,20 @@
 				return pageName;
 			}
 			
+			private function removeItemClickHandler():void
+			{
+				if (tree.selectedItem && tree.selectedIndex > 0)
+					Alert.show("Delete this Page?", "Dalete Page", Alert.YES|Alert.NO, this, alertDeletPageClickHandler);
+			}
+			
+			private function alertDeletPageClickHandler(event:CloseEvent):void
+			{
+				if (event.detail == Alert.YES)
+				{
+					removeItem();
+				}
+			}
+			
 			private function removeItem() : void
 			{
 				var selectedIndex : Number = tree.selectedIndex;
@@ -1213,7 +1227,7 @@
 							   textRollOverColor="#FFFFFF"
 							   enabled="{Boolean(cmboxProduct.selectedItem)}" />
 					<mx:Button label="Remove Page"
-							   click="{removeItem()}"
+							   click="{removeItemClickHandler()}"
 							   color="#FFFFFF"
 							   fillColors="#333333"
 							   textSelectedColor="#FFFFFF"
