Edit LoginButtonSkin and add mask in MainWindow
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6913 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/LoginButtonSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/LoginButtonSkin.mxml
@@ -83,7 +83,7 @@
 
 		<s:Label id="labelDisplay"
 				 fontWeight="bold" paddingTop="4" textAlign="left"
-				 maxDisplayedLines="1" fontFamily="Verdana"/>
+				 maxDisplayedLines="1" fontFamily="Verdana" color="#AAAAAA"/>
 	</s:Group>
 
 </s:SparkSkin>
