--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -61,8 +61,7 @@
 	
 	<!-- layer 2: titlebar + content + status bar -->
 	<s:VGroup bottom="9" left="9" right="9" top="9" gap="0"
-			  >
-		<!--mask="{topMask}"-->
+			  mask="{topMask}">
 
 		<s:Group width="100%">
 			<s:TitleBar id="titleBar"
