Edit PanelSkin and Color attribute
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6914 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeDropdownItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeDropdownItemRenderer.mxml
@@ -50,8 +50,8 @@
 				codeInterface[ "value" ] = matches[ 2 ];
 
 				//				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
-				//secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
-				//firstColor.color = secondColor.color + 0x222222;
+				secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
+				firstColor.color = secondColor.color + 0x222222;
 //				valueField.maxChars = uint( codeInterface[ "value" ] );
 //				valueField.text = _attributeVO.value;
 
