--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
@@ -53,8 +53,8 @@
 				//				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
 //				bgFill.fill = new SolidColor(uint( getColorByGroup( _attributeDescriptionVO.colorGroup ) ));
 
-				//secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
-				//firstColor.color = secondColor.color + 0x222222;
+				secondColor.color = getColorByGroup( _attributeDescriptionVO.colorGroup );
+				firstColor.color = secondColor.color + 0x222222;
 
 				//				valueField.maxChars = uint( codeInterface[ "value" ] );
 				//				valueField.text = _attributeVO.value;
