automatically add <h1> (from page title)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6915 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/AddProduct.mxml
+++ b/Help/Editor/v.01/src/AddProduct.mxml
@@ -109,7 +109,7 @@
 					sqlProxy.addProduct(productName.text, 0, productTitle.text,
 						productDescription.text,  productLanguage.text );
 					sqlProxy.addPage(productName.text, productLanguage.text, productName.text, 0, productTitle.text,
-								"", ""); 
+								"", getNewPageContent(productTitle.text)); 
 					dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
 				} else
 				{
@@ -117,6 +117,11 @@
 					okHandler();
 				}
 				
+			}
+			
+			private function getNewPageContent(aPageTitle:String) : String
+			{
+				return HTML_WYSIWYG.getNewPageContent(aPageTitle);
 			}
 			
 			private function editClickHandler():void
