--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -1030,25 +1030,6 @@
 			{
 				// TODO Auto-generated method stub
 				this.html_wysiwyg.addEventListener(HTML_WYSIWYG.EVENT_WYSIWYG_SAVE_COMBINATION_CLICKED, onWysiwygSaveCombinationClicked);
-				this.html_wysiwyg.addEventListener(KeyboardEvent.KEY_UP, onWysiwygKeyUp);		
-			}
-			
-			private function onWysiwygKeyUp(keyEvent:KeyboardEvent):void
-			{
-				switch(keyEvent.keyCode)
-				{
-					case Keyboard.V:
-					{
-						if (keyEvent.ctrlKey && keyEvent.shiftKey) {
-							pasteLinkToPage();
-						}
-						break;
-					}
-					default:
-					{					
-						break;
-					}
-				}
 			}
 			
 			private function onTreeKeyboardKeyUp(aKeyboardEvent:KeyboardEvent) : void
@@ -1061,7 +1042,7 @@
 							if (!tree.selectedItem) {
 								return;
 							}
-							copyTreePages(XML(tree.selectedItem), !aKeyboardEvent.shiftKey)
+							copyTreePages(XML(tree.selectedItem));
 						}
 						break;
 					}
@@ -1085,7 +1066,7 @@
 				tree.addEventListener(KeyboardEvent.KEY_UP, onTreeKeyboardKeyUp);
 			}
 			
-			private function copyTreePages(pagesXml : XML, copyTree:Boolean = true):void
+			private function copyTreePages(pagesXml : XML):void
 			{
 				var resoult	: Object;
 				
@@ -1096,15 +1077,12 @@
 				resoult = sqlProxy.getPage(cmboxProduct.selectedItem.name, "en_US", pagesXml.@name);
 				if (resoult)
 				{
+					html_wysiwyg.generateLinkToPage(resoult[0]["name"], resoult[0]["title"]);
+					
 					resoult[0]["parentPageName"] = tree.selectedItem.@name;
-					if (copyTree) 
-					{
-						resoult[0]["name"] = generatePageName();
-					}
+					resoult[0]["name"] = generatePageName();
 					treePagesBuffer.push(resoult);
 				}
-				
-				if (!copyTree) return;
 				
 				addCopiedPage(pagesXml, treePagesBuffer.length-1);
 				
@@ -1151,19 +1129,6 @@
 			private function clearTreePagesBuffer():void
 			{
 				treePagesBuffer = null;
-			}
-			
-			private function pasteLinkToPage():void
-			{
-				if (!treePagesBuffer) return;
-				
-				if (treePagesBuffer.length > 0) { 
-					var lPageName : String =  treePagesBuffer[0][0]["name"];
-					var lPageTitle : String =  treePagesBuffer[0][0]["title"];
-					
-					html_wysiwyg.insertLinkToPage(lPageName, lPageTitle);
-					savePage();
-				}
 			}
 			
 		]]>
