new skins for window. Fix problem with display RadioButton
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6918 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -60,6 +60,8 @@
 			import mx.skins.spark.ButtonSkin;
 			
 			import net.vdombox.ide.modules.wysiwyg.ApplicationFacade;
+			
+			import org.puremvc.as3.multicore.patterns.facade.Facade;
 
 			public static const MODULE_ID : String = "net.vdombox.ide.modules.Wysiwyg";
 
