--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -24,17 +24,17 @@
 	<components:WorkArea id="workArea"
 						 height="100%" width="100%"/>
 
-	<s:VGroup height="100%" width="228">
+	<mx:VDividedBox height="100%" width="228">
+		
+		<panels:ObjectsTreePanel id="objectsTreePanel"
+								 width="100%"
+								 backgroundAlpha="0" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
+								 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
 
 		<panels:ObjectAttributesPanel id="objectAttributesPanel"
-									  width="100%" height="60%"
+									  width="100%"
 									  backgroundAlpha="0" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
 									  title="{ resourceManager.getString( 'Wysiwyg_General', 'object_attributes_panel_title') }" borderAlpha="0" borderVisible="false"/>
 
-		<panels:ObjectsTreePanel id="objectsTreePanel"
-									 width="100%" height="40%"
-									 backgroundAlpha="0" cornerRadius="0" skinClass="net.vdombox.ide.modules.wysiwyg.view.skins.PanelSkin"
-									 title="{ resourceManager.getString( 'Wysiwyg_General', 'pages_panel_title') }" borderAlpha="0" borderVisible="false"/>
-
-	</s:VGroup>
+	</mx:VDividedBox>
 </s:HGroup>
