--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ColorPickerWindowSkin.mxml
@@ -4,7 +4,7 @@
 		xmlns:mx="library://ns.adobe.com/flex/mx"
 		xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*" 
 		xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*"
-		>
+		width="460" height="360">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.wysiwyg.view.components.windows.ColorPickerWindow")]
@@ -27,176 +27,190 @@
 	name=titleDisplay, type=spark.core.IDisplayText, required=false
 	name=controlBarGroup, type=spark.components.Group, required=false
 	-->
-	<s:Rect width="100%" height="100%">
+	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
 		<s:fill>
-			<s:SolidColor color="#C4C4C4"/>
+			<s:SolidColor color="#424242"/>
 		</s:fill>
 	</s:Rect>
-	<s:VGroup>	
-		
-	<s:HGroup  paddingBottom="0" paddingLeft="0" paddingRight="4" paddingTop="0">
-		
-		<s:HGroup height="272" gap="0" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0">
-			
-			<mx:Canvas height="272" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="272">
+	<s:VGroup left="9" right="9" top="9" bottom="9" gap="0">	
+		<s:Group width="100%" height="100%">
+			<s:Rect>
+				<s:fill>
+					<s:SolidColor color="#353535"/>
+				</s:fill>
+			</s:Rect>
+			<s:HGroup  paddingBottom="0" paddingLeft="0" paddingRight="4" paddingTop="0">
 				
-				<mx:Canvas height="258" width="258" x="7" y="7"
-						   backgroundColor="#000000">
+				<s:HGroup height="272" gap="0" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0">
 					
-					<attributeRenderers:ColorPickerCanvas id="ccc"
-														  height="256" maxHeight="256" maxWidth="256" minHeight="256"
-														  minWidth="256" width="256" x="1" y="1"
-														  mouseDown="{hostComponent.on_ccc_mouse_down(event);}"/>
-				</mx:Canvas>
-				
-				<mx:SWFLoader id="ccm"
-							  source="{hostComponent.cc_marker}" x="0" y="0" />
-			</mx:Canvas>
-			
-			<mx:Canvas height="272" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="36"
-					   mouseDown="hostComponent.on_ccb_mouse_down(event);">
-				
-				<mx:Canvas height="258" width="22" x="7" y="7"
-						   backgroundColor="#000000">
+					<mx:Canvas height="272" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="272">
+						
+						<mx:Canvas height="258" width="258" x="7" y="7"
+								   backgroundColor="#000000">
+							
+							<attributeRenderers:ColorPickerCanvas id="ccc"
+																  height="256" maxHeight="256" maxWidth="256" minHeight="256"
+																  minWidth="256" width="256" x="1" y="1"
+																  mouseDown="{hostComponent.on_ccc_mouse_down(event);}"/>
+						</mx:Canvas>
+						
+						<mx:SWFLoader id="ccm"
+									  source="{hostComponent.cc_marker}" x="0" y="0" />
+					</mx:Canvas>
 					
-					<attributeRenderers:ColorPickerCanvas id="ccb"
-														  height="256" maxHeight="256" maxWidth="20" minHeight="256"
-														  minWidth="20" width="20" x="1" y="1"
-														  mouseDown="hostComponent.on_ccb_mouse_down(event);" />
-				</mx:Canvas>
+					<mx:Canvas height="272" horizontalScrollPolicy="off" verticalScrollPolicy="off" width="36"
+							   mouseDown="hostComponent.on_ccb_mouse_down(event);">
+						
+						<mx:Canvas height="258" width="22" x="7" y="7"
+								   backgroundColor="#000000">
+							
+							<attributeRenderers:ColorPickerCanvas id="ccb"
+																  height="256" maxHeight="256" maxWidth="20" minHeight="256"
+																  minWidth="20" width="20" x="1" y="1"
+																  mouseDown="hostComponent.on_ccb_mouse_down(event);" />
+						</mx:Canvas>
+						
+						<mx:SWFLoader id="ccrm"
+									  height="9" source="{hostComponent.cc_r_marker}" width="5" x="0" y="0"
+									  scaleContent="false" />
+						
+						<mx:SWFLoader id="cclm"
+									  height="9" source="{hostComponent.cc_l_marker}" width="5" x="0" y="0"
+									  scaleContent="false" />
+					</mx:Canvas>
+				</s:HGroup>
 				
-				<mx:SWFLoader id="ccrm"
-							  height="9" source="{hostComponent.cc_r_marker}" width="5" x="0" y="0"
-							  scaleContent="false" />
-				
-				<mx:SWFLoader id="cclm"
-							  height="9" source="{hostComponent.cc_l_marker}" width="5" x="0" y="0"
-							  scaleContent="false" />
-			</mx:Canvas>
-		</s:HGroup>
+				<s:VGroup height="100%"
+						  paddingBottom="8" paddingTop="8">
+					
+					<s:HGroup>
+						
+						<s:RadioButton id="rb_H" label="H" skinClass="spark.skins.spark.RadioButtonSkin"
+									   click="hostComponent.on_rb_hsb_change()" 
+										click.inactiveWithControlBar="hostComponent.on_rb_hsb_change()"/>
+						
+						<mx:NumericStepper id="tx_H"
+										   maxChars="3" maximum="359" minimum="0" stepSize="1" value="{hostComponent.hsb.h}"
+										   change="hostComponent.on_tx_hsb_change()" />
+						
+						<s:Label text="°" />
+					</s:HGroup>
+					
+					<s:HGroup>
+						
+						<s:RadioButton id="rb_S"
+										label="S" skinClass="spark.skins.spark.RadioButtonSkin"
+										click="hostComponent.on_rb_hsb_change()" />
+						
+						<mx:NumericStepper id="tx_S"
+										   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.s}"
+										   change="hostComponent.on_tx_hsb_change()" />
+						
+						<s:Label text="%" />
+					</s:HGroup>
+					
+					<s:HGroup>
+						
+						<s:RadioButton id="rb_B"
+										label="B" skinClass="spark.skins.spark.RadioButtonSkin"
+										click="hostComponent.on_rb_hsb_change()" />
+						
+						<mx:NumericStepper id="tx_B"
+										   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.b}"
+										   change="hostComponent.on_tx_hsb_change()" />
+						
+						<s:Label text="%" />
+					</s:HGroup>
+					
+					<s:Spacer height="4" />
+					
+					<s:HGroup>
+						
+						<s:RadioButton id="rb_r"
+										label="R" skinClass="spark.skins.spark.RadioButtonSkin"
+										click="hostComponent.on_rb_rgb_change()" />
+						
+						<mx:NumericStepper id="tx_r"
+										   maxChars="3" maximum="255" minimum="0" stepSize="1"
+										   value="{(hostComponent._color >> 16) &amp; 0xFF}"
+										   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
+					</s:HGroup>
+					
+					<s:HGroup>
+						
+						<s:RadioButton id="rb_g"
+										label="G" skinClass="spark.skins.spark.RadioButtonSkin"
+										click="hostComponent.on_rb_rgb_change()" />
+						
+						<mx:NumericStepper id="tx_g"
+										   maxChars="3" maximum="255" minimum="0" stepSize="1"
+										   value="{(hostComponent._color >> 8) &amp; 0xFF}"
+										   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
+					</s:HGroup>
+					
+					<s:HGroup>
+						
+						<s:RadioButton id="rb_b"
+										label="B" skinClass="spark.skins.spark.RadioButtonSkin"
+										click="hostComponent.on_rb_rgb_change()" />
+						
+						<mx:NumericStepper id="tx_b"
+										   maxChars="3" maximum="255" minimum="0" stepSize="1"
+										   value="{(hostComponent._color) &amp; 0xFF}"
+										   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
+					</s:HGroup>
+				</s:VGroup>
+			</s:HGroup>
+		</s:Group>
 		
-		<s:VGroup height="100%"
-				 paddingBottom="8" paddingTop="8">
-			
-			<s:HGroup>
-				
-				<mx:RadioButton id="rb_H"
-								label="H"
-								click="hostComponent.on_rb_hsb_change()" />
-				
-				<mx:NumericStepper id="tx_H"
-								   maxChars="3" maximum="359" minimum="0" stepSize="1" value="{hostComponent.hsb.h}"
-								   change="hostComponent.on_tx_hsb_change()" />
-				
-				<s:Label text="°" />
-			</s:HGroup>
-			
-			<s:HGroup>
-				
-				<mx:RadioButton id="rb_S"
-								label="S"
-								click="hostComponent.on_rb_hsb_change()" />
-				
-				<mx:NumericStepper id="tx_S"
-								   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.s}"
-								   change="hostComponent.on_tx_hsb_change()" />
-				
-				<s:Label text="%" />
-			</s:HGroup>
-			
-			<s:HGroup>
-				
-				<mx:RadioButton id="rb_B"
-								label="B"
-								click="hostComponent.on_rb_hsb_change()" />
-				
-				<mx:NumericStepper id="tx_B"
-								   maxChars="3" maximum="100" minimum="0" stepSize="1" value="{hostComponent.hsb.b}"
-								   change="hostComponent.on_tx_hsb_change()" />
-				
-				<s:Label text="%" />
-			</s:HGroup>
-			
-			<s:Spacer height="4" />
-			
-			<s:HGroup>
-				
-				<mx:RadioButton id="rb_r"
-								label="R"
-								click="hostComponent.on_rb_rgb_change()" />
-				
-				<mx:NumericStepper id="tx_r"
-								   maxChars="3" maximum="255" minimum="0" stepSize="1"
-								   value="{(hostComponent._color >> 16) &amp; 0xFF}"
-								   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
-			</s:HGroup>
-			
-			<s:HGroup>
-				
-				<mx:RadioButton id="rb_g"
-								label="G"
-								click="hostComponent.on_rb_rgb_change()" />
-				
-				<mx:NumericStepper id="tx_g"
-								   maxChars="3" maximum="255" minimum="0" stepSize="1"
-								   value="{(hostComponent._color >> 8) &amp; 0xFF}"
-								   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
-			</s:HGroup>
-			
-			<s:HGroup>
-				
-				<mx:RadioButton id="rb_b"
-								label="B"
-								click="hostComponent.on_rb_rgb_change()" />
-				
-				<mx:NumericStepper id="tx_b"
-								   maxChars="3" maximum="255" minimum="0" stepSize="1"
-								   value="{(hostComponent._color) &amp; 0xFF}"
-								   change="hostComponent.on_tx_rgb_change()" dataChange="hostComponent.on_tx_rgb_change()" />
-			</s:HGroup>
-			
-			<s:Spacer height="100%" />
-			
-			<s:HGroup gap="0">
-				
-				<s:Label text="#" />
-				
-				<s:TextInput id="hexrgb"
-							  maxChars="6" text=""
-							  change="hostComponent.on_tx_hex_change()"
-							  restrict="a-fA-F0-9" />
-			</s:HGroup>
-		</s:VGroup>
-	</s:HGroup>
+		<s:Spacer height="100%"/>
 	
-	<mx:ControlBar horizontalAlign="right" width="100%">
+		<s:Group width="100%" height="100%">
+			<s:Rect width="100%" height="100%">
+				<s:fill>
+					<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+				</s:fill>
+			</s:Rect>
 		
-		<s:HGroup styleName="bbbox"
-				 gap="1" paddingBottom="1" paddingLeft="10" paddingRight="10" paddingTop="1">
+			<mx:ControlBar horizontalAlign="right" width="100%" height="60">
 			
-			<mx:Box height="22" width="32"
-					backgroundColor="{hostComponent._color}" />
+				<s:HGroup styleName="bbbox"
+					 	 gap="1" paddingBottom="1" paddingLeft="10" paddingRight="10" paddingTop="1">
+				
+					<mx:Box height="22" width="32"
+							backgroundColor="{hostComponent._color}" />
+				
+					<mx:Box height="22" width="32"
+							backgroundColor="{hostComponent.old_color}"
+							click="hostComponent.on_restore_color()"/>
+				</s:HGroup>
 			
-			<mx:Box height="22" width="32"
-					backgroundColor="{hostComponent.old_color}"
-					click="hostComponent.on_restore_color()"/>
-		</s:HGroup>
-		
-		<mx:VBox height="26" horizontalScrollPolicy="off" styleName="bbbox" verticalScrollPolicy="off"
-				 width="56"
-				 backgroundAlpha="0.4" borderColor="#808080" horizontalAlign="center" paddingLeft="4"
-				 paddingRight="4" verticalAlign="middle">
+				<!--<mx:VBox height="26" horizontalScrollPolicy="off" styleName="bbbox" verticalScrollPolicy="off"
+					 	width="56"
+					 	backgroundAlpha="0.4" borderColor="#808080" horizontalAlign="center" paddingLeft="4"
+					 	paddingRight="4" verticalAlign="middle">
+				
+					<mx:SWFLoader id="osi_view" />
+				</mx:VBox>-->
 			
-			<mx:SWFLoader id="osi_view" />
-		</mx:VBox>
+				<s:HGroup gap="0">
+				
+					<s:Label text="#" />
+				
+					<s:TextInput id="hexrgb" change="hostComponent.on_tx_hex_change()" maxChars="6"
+							 	restrict="a-fA-F0-9" text="" width="80"/>
+				</s:HGroup>
+			
+				<s:Spacer width="100%" />
+			
+				<s:Button label="Cancel"  width="48" height="29" cornerRadius="15"
+					  		click="hostComponent.cancel_close_window()" />
+			
+				<s:Button label="Use" width="88" height="29" cornerRadius="15" fontSize="18"
+					  		click="hostComponent.ok_close_window()" />
+			</mx:ControlBar>	
 		
-		<s:Spacer width="100%" />
+		</s:Group>	
 		
-		<s:Button label="Ok"
-				   click="hostComponent.ok_close_window()" />
-		
-		<s:Button label="Cancel"
-				   click="hostComponent.cancel_close_window()" />
-	</mx:ControlBar>	
 	</s:VGroup>
 </s:SparkSkin>
