Add image in button in ColorPickerWindow and MultilinePicker. Add button "Cancel" on MultilineWindow and edit code process close window.
git-svn-id: http://svn.vdombox.ru/flextools/trunk@6920 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
@@ -47,6 +47,7 @@
 				dispatchEvent( new AttributeEvent( AttributeEvent.CHOSE_RESOURCES_IN_MULTILINE ) );				
 				
 				multilineWindow.addEventListener( "apply", multilineWindow_applyHandler, false, 0, true );
+				multilineWindow.addEventListener( "cancel", multilineWindow_applyHandler, false, 0, true );
 				
 				PopUpManager.addPopUp( multilineWindow, DisplayObject( UIComponent( parent ).parentApplication ), true );
 				PopUpManager.centerPopUp( multilineWindow );
@@ -58,13 +59,15 @@
 
 				if ( currentTarget is MultilineWindow )
 				{
-					value = event.value;				
+					if (event.type == "apply")
+						value = event.value;				
 					UIComponent( currentTarget ).removeEventListener( "apply", multilineWindow_applyHandler, false );					
 				}
 
 //				var popUpWindowManager : PopUpManager = PopUpManager.getInstance();
 				PopUpManager.removePopUp( multilineWindow );
 			}
+
 
 			override public function validationResultHandler( event : ValidationResultEvent ) : void
 			{
