--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -2,9 +2,10 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/mx"
+		xmlns:ClassComponents="net.vdombox.ide.modules.wysiwyg.view.components.classcomponents.*"
 		xmlns="vdom.containers.*"
 		xmlns:controls="vdom.controls.*" 
-		width="497" height="415"
+		width="497" height="415" xmlns:ClassComponents1="net.vdombox.ide.modules.wysiwyg.view.components.ClassComponents.*"
 		>
 	<!-- host component -->
 	<fx:Metadata>
@@ -76,17 +77,20 @@
 			</s:fill>
 		</s:Rect>
 		
-		<s:HGroup height="100%" width="100%"
+		<s:HGroup height="100%" width="100%" horizontalAlign="right"
 				  bottom="0" gap="15" paddingLeft="25" paddingTop="10"
 				  paddingRight="15" verticalAlign="middle">
 			
 			<s:Button width="138" height="29" 
+					  icon="@Embed(source='icons/Add.png')"
 					  label="Resources" cornerRadius="15" 
 					  click="hostComponent.insertResourceLink();"/>
 			
 			<s:Spacer width="100%" />
 			
-			<s:Button width="48" height="29" cornerRadius="15"/>
+			<s:Button width="48" height="29" cornerRadius="15" 
+					  icon="@Embed(source='icons/Cancel.png')" iconPlacement="top"
+					  click="{hostComponent.cancel_close_window()}"/>
 			
 			<s:Button width="88" height="29" label="Save" fontSize="18"
 					  cornerRadius="15"
